test/integration/bad/missing_dist_suffix/non_existing_distribution_suffix3.stan
data { 
}
model {  
    target += binomial_logit_lccdf(1|0,1);
}
